--- a/Playbooks/ApacheServer/temp-homepage.html
+++ b/Playbooks/ApacheServer/temp-homepage.html
@@ -14,5 +14,6 @@
         }
     </style>
     <h1 id="main">Welcome to FredChex!</h1>
+    <a href="localhost:4200">Click here for vault</a>
 </body>
 </html>
